# pre-commit

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .vale.ini  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING_PYTHON.md  Makefile  README.md  pyproject.toml
.cicd-tools/boxes/bootstrap/libraries/: container.sh  environment.sh
.cicd-tools/boxes/bootstrap/pre-commit/: gettext-translations.sh
.cicd-tools/configuration/: pre-commit-bootstrap.yaml
.github/config/actions/: gaurav-nelson-github-action-markdown-link-check.json
.github/config/workflows/: workflow-push.json
.github/scripts/: job-50-test-precommit.sh  step-setup-environment.sh
.github/workflows/: workflow-push.yml
.vale/Vocab/pre-commit/: accept.txt
src/cicd-tools/: __init__.py
src/cicd-tools/libraries/: environment.sh  tools.sh
src/cicd_tools_pre_commit/: __init__.py  gettext.py  pysed.py  pysed_logic.py  resources.py  sphinx.py
src/cicd_tools_pre_commit/cli/: __init__.py  types.py
src/cicd_tools_pre_commit/cli/tests/: __init__.py  test_dir_existing.py  test_dir_valid.py  test_existing_directory.py  test_language_code.py  test_path_existing.py  test_path_valid.py  test_regex.py  test_types.py  test_valid_path.py
src/cicd_tools_pre_commit/cli/types/: __init__.py  dir_existing.py  dir_valid.py  existing_directory.py  file_existing.py  language_code.py  path_existing.py  path_valid.py  regex.py  valid_path.py
src/cicd_tools_pre_commit/gettext/: __init__.py  missing_translations.py
src/cicd_tools_pre_commit/gettext/tests/: test_gettext_missing_translations.py
src/cicd_tools_pre_commit/system/: __init__.py  argparse_types.py  call.py  fs.py  git.py
src/cicd_tools_pre_commit/system/tests/: test_call.py  test_fs.py  test_git.py
src/cicd_tools_pre_commit/tests/: test_cicd_tools_pre_commit.py  test_file_existing.py  test_gettext.py  test_pysed.py  test_sphinx.py  test_sphinx_build_language.py  test_sphinx_translate.py  test_with_cicd_resources.py
src/pre-commit/: cicd-tools-box.sh  cicd-tools-key.sh  commitizen-pre-bump.sh  documentation-sphinx.sh  gettext-translations.sh  lint-ansible.sh  lint-github-workflow-header.sh  pre-commit-sort-config.sh  pre-commit-sort-hooks.sh  spelling-commit-message.sh
